Closed Bug 538431 Opened 15 years ago Closed 15 years ago

warning: ‘virtual nsIFrame::IntrinsicSize nsFrame::GetIntrinsicSize()’ was hidden ... by ‘nsSize nsVideoFrame::GetIntrinsicSize(nsIRenderingContext*)’

Categories

(Core :: Audio/Video, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dholbert, Assigned: dholbert)

References

Details

Attachments

(1 file)

I'm filing this bug on this build warning (using g++ 4.3): > In file included from ../../../../../mozilla/content/html/content/src/nsHTMLMediaElement.cpp:83: > ../../../../../mozilla/content/html/content/src/../../../../layout/generic/nsFrame.h:282: warning: ‘virtual nsIFrame::IntrinsicSize nsFrame::GetIntrinsicSize()’ was hidden > ../../../../../mozilla/content/html/content/src/../../../../layout/generic/nsVideoFrame.h:75: warning: by ‘nsSize nsVideoFrame::GetIntrinsicSize(nsIRenderingContext*)’ The function that causes this -- nsVideoFrame::GetIntrinsicSize -- received its problematic name in this changeset: http://hg.mozilla.org/mozilla-central/rev/4178997e692a Before that, the function was called nsVideoFrame::GetVideoSize. I propose fixing the warning by renaming it to GetVideoIntrinsicSize. I'm attaching a patch that does this.
Attachment #420581 - Flags: review?(roc)
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: