Bug 538431: Rename nsVideoFrame::GetIntrinsicSize to 'GetVideoIntrinsicSize', so it doesn't hide inherited method. r=roc